[package]
name = "gping"
version = "1.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
repository = "https://github.com/orf/gping"
license = "MIT"
description = "Ping, but with a graph."
#rust = "1.44.0"

[dependencies]
pinger = "0.3.0"
structopt = "0.3.20"
tui = { version="0.13.0", features = ["crossterm"], default_features = false }
crossterm = "0.18.0"
anyhow = "1.0.34"
histogram = "0.6.9"
dns-lookup = "1.0.5"

[profile.release]
lto = true
