[package]
name = "pinger"
version = "1.0.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"
license = "MIT"
description = "A small cross-platform library to execute the ping command and parse the output"
repository = "https://github.com/voysys/pinger/"

[dependencies]
dns-lookup = "1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
winping = "0.10"

[target.'cfg(unix)'.dependencies]
caps = "0.5"
libc = "0.2"
rand = "0.8"
socket2 = { version = "0.5", features = ["all"] }
