[package]
name = "gping"
version = "1.18.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
repository = "https://github.com/orf/gping"
license = "MIT"
description = "Ping, but with a graph."
build = "build.rs"
readme = "../readme.md"

[dependencies]
pinger = { version = "^1.3.0", path = "../pinger" }
tui = { package = "ratatui", version = "0.29.0", features = ["crossterm"], default-features = false }
crossterm = "0.28.1"
anyhow = "1.0.94"
dns-lookup = "2.0.0"
chrono = "0.4.37"
itertools = "0.13.0"
shadow-rs = { version = "0.36.0", default-features = false }
const_format = "0.2.32"
clap = { version = "4.5.22", features = ["derive"] }

[build-dependencies]
shadow-rs = { version = "0.36.0", default-features = false }
