[package]
name = "gping"
version = "1.20.1"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
repository = "https://github.com/orf/gping"
license = "MIT"
description = "Ping, but with a graph."
build = "build.rs"
readme = "../readme.md"

[dependencies]
pinger = { version = "^2.1.1", path = "../pinger" }
tui = { package = "ratatui", version = "0.29.0", features = ["crossterm"], default-features = false }
crossterm = "0.29.0"
anyhow = "1.0.100"
chrono = "0.4.42"
itertools = "0.14.0"
shadow-rs = { version = "1.4.0", default-features = false }
const_format = "0.2.35"
clap = { version = "4.5.49", features = ["derive"] }
clap_mangen = "0.2.30"
idna = "1.1.0"

[build-dependencies]
shadow-rs = { version = "1.4.0"}
