[package]
name = "pinger"
version = "1.1.1"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
license = "MIT"
description = "A small cross-platform library to execute the ping command and parse the output"
repository = "https://github.com/orf/pinger/"

[dependencies]
anyhow = "1.0.80"
thiserror = "1.0.57"
rand = "0.8.5"
lazy-regex = "3.1.0"

[target.'cfg(windows)'.dependencies]
winping = "0.10.1"
dns-lookup = "2.0.0"

[dev-dependencies]
os_info = "3.6.0"
