[package]
name = "pinger"
version = "2.1.1"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
license = "MIT"
description = "A small cross-platform library to execute the ping command and parse the output"
repository = "https://github.com/orf/gping/tree/master/pinger"

[dependencies]
thiserror = "2.0.17"
lazy-regex = "3.4.2"
rand = { version = "0.9.0", optional = true }

[target.'cfg(windows)'.dependencies]
winping = "0.10.1"

[dev-dependencies]
os_info = "3.13.0"
ntest = "0.9.3"
anyhow = "1.0.100"

[features]
default = []
fake-ping = ["rand"]
